; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_jsonpath_exec.c_wrapItemsInArray.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_jsonpath_exec.c_wrapItemsInArray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WJB_BEGIN_ARRAY = common dso_local global i32 0, align 4
@WJB_ELEM = common dso_local global i32 0, align 4
@WJB_END_ARRAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @wrapItemsInArray to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @wrapItemsInArray(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i32* null, i32** %3, align 8
  %6 = load i32, i32* @WJB_BEGIN_ARRAY, align 4
  %7 = call i32* @pushJsonbValue(i32** %3, i32 %6, i32* null)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @JsonValueListInitIterator(i32* %8, i32* %4)
  br label %10

10:                                               ; preds = %14, %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i32* @JsonValueListNext(i32* %11, i32* %4)
  store i32* %12, i32** %5, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load i32, i32* @WJB_ELEM, align 4
  %16 = load i32*, i32** %5, align 8
  %17 = call i32* @pushJsonbValue(i32** %3, i32 %15, i32* %16)
  br label %10

18:                                               ; preds = %10
  %19 = load i32, i32* @WJB_END_ARRAY, align 4
  %20 = call i32* @pushJsonbValue(i32** %3, i32 %19, i32* null)
  ret i32* %20
}

declare dso_local i32* @pushJsonbValue(i32**, i32, i32*) #1

declare dso_local i32 @JsonValueListInitIterator(i32*, i32*) #1

declare dso_local i32* @JsonValueListNext(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
